# inciweb-wildfires

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  test.py  test_aio.py
.github/workflows/: continuous-deployment.yml  docs.yml  scrape.yml
data/: incidents.json  timestamp.txt
docs/: conf.py  index.md
inciweb_wildfires/: __init__.py  aio.py  cli.py
